[tool.poetry]
name = "pycounts_jd25"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Monty Python"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
